--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -40,7 +40,7 @@ const { title, description, bgType } = Astro.props
     {bgType && <Background type={bgType} />}
     <div class="min-h-screen flex flex-col">
       <Header />
-      <main class="flex-1">
+      <main class="flex-1 pt-14">
         <!-- <KonamiTrigger client:load /> -->
         <slot />
       </main>
